Fix print height on small screens

--- a/styles/print.css
+++ b/styles/print.css
@@ -10,6 +10,9 @@
 
   html {
     -webkit-print-color-adjust: exact !important;
+  }
+
+  body {
     height: var(--numberOfPages);
   }
 
